# lambeq-docs

./: .gitignore  .gitmodules  README.md  build-docs.sh  pyproject.toml  requirements.txt
.github/workflows/: docs.yml
docs/: CONTRIBUTING.rst  cite.rst  cli.rst  conf.py  discocirc-babi.rst  glossary.rst  index.rst  installation.rst  intro.rst  lambeq.backend.rst  lambeq.experimental.rst  licence.rst  low-level.rst  manual-training.rst  ml_lambeq.rst  models.rst  nlp-101.rst  nlp-data.rst  notebooks.rst  package-api.rst  references.bib  release-notes.rst  root-api.rst  sent2circ.rst  support.rst  text2circ.rst  training.rst  uml-diagrams.rst  use-cases.rst
docs/_static/: nav-config.js
docs/_templates/: index.html  lambeq_landing_page.html
docs/api/: api.rst  lambeq.ansatz.rst  lambeq.backend.rst  lambeq.core.rst  lambeq.rewrite.rst  lambeq.text2diagram.rst
docs/examples/: circuit.ipynb  dependency-reader.ipynb  pennylane.ipynb  quantum_pipeline.py  quantum_pipeline_jax.py  tensor.ipynb  torchquantum.ipynb
docs/guide/: cli.rst  lambeq-basic.rst  ml_basic.rst  ml_lambeq.rst  ml_models.rst  ml_use-cases.rst  parsing.rst  pipeline.rst  string-diagrams.rst
docs/ml/: ml_basic.rst
docs/nlp-101/: nlp-data.rst  nlp-intro.rst  nlp-ml.rst
docs/puml/: ansatz.puml  backend-py2puml.puml  symbol.puml  text2diagram.puml  training.puml
docs/tutorials/: discocat.ipynb  discocirc-basics.ipynb  discocirc-mc-task.ipynb  monoidal.ipynb  (+15 more)
landing/: .gitignore  Dockerfile  environment.d.ts  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsup.config.ts
(+12 files in other folders)
